# Semantic-distances-GloVe-

./: .gitignore  CMakeLists.txt  GPU_CUDA_Distances.sln
GPU_CUDA_Distances/: CudaHelp.cu  CudaHelper.cpp  GPU_CUDA_Distances.vcxproj  GlobalHeader.h  kernel.cu  loader.cpp  loader.h  main.cpp  tmp.txt
Memoria/: Main.tex  biblio.bib
